<?xml version="1.0"?>
<package format="3">
  <name>arduino_imu</name>
  <version>1.0.0</version>
  <description>ROS2 package to access IMUs attached to an Arduino board</description>
  <maintainer email="bernd.pfrommer@gmail.com">Bernd Pfrommer</maintainer>
  <license>Apache2</license>


  <!-- ROS2 dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>sensor_msgs</depend>
  
  <export>
    <!-- this is crucial else the package will not be registered! -->
    <build_type>ament_cmake</build_type>
  </export>

</package>
